# telega_bot2

./: README.md  pyproject.toml  requirements.txt  telega_bot.py
